--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    background-color: #293251;
+    background-color: #a7d3f7;
 }
 
 .container{
@@ -28,7 +28,7 @@ body{
     padding: 15px;
     margin: 0 auto;
     font-size: 1.2em;
-    color: #293251;
+    color: #8ffa98;
 }
 
 .notification{
@@ -68,7 +68,7 @@ body{
 .temperature-value p{
     padding: 0;
     margin: 0;
-    color: #293251;
+    color: #e65908;
     font-size: 4em;
     text-align: center;
     cursor: pointer;
